# python-project-lvl2

./: Makefile  README.md  pyproject.toml
gendiff/: generate_diff.py
gendiff/gendiff/: generate_diff.py
gendiff/gendiff/scripts/: gendiif.py
gendiff/scripts/: __init__.py
gendiff/tests/: test_gendiff.py
gendiff/tests/fixtures/: test1_result.txt  test5_result.txt
tests/: test_gendiff.py
tests/fixtures/: test1_result.txt  test2_result.txt  test3_result.txt
