[tool.poetry]
packages = [
  {include = "gendiff"},
]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aleksey Vedin <lumenlawliet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
wemake-python-styleguide = "^0.15.0"
coverage = "^6.0.1"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"